--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "name": "flying-notes",
   "version": "1.0.0",
   "description": "an application for notes management.",
-  "main": "dist/src/server.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "tsc && node ./dist/src/server.js",
-    "app": "tsc && nodemon ./dist/src/server.js",
+    "start": "tsc && node ./dist/server.js",
+    "app": "tsc && nodemon ./dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Almog Gabay",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.1",
-    "@types/mongoose": "^5.5.17",
+    "@types/mongoose": "^5.5.19",
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.1",
+    "mongoose": "^5.7.3",
     "rss-parser": "^3.7.2",
     "typescript": "^3.6.3"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.3"
   }
 }
