--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.5.19",
+    "@types/xml2js": "^0.4.5",
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
