--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "rss-parser": "^3.7.2"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
