--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "tsc && node ./dist/server.js",
+    "dev": "tsc -w & nodemon ./dist/server.js",
     "client": "cd client && npm start",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
-    "dev": "tsc && nodemon ./dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Almog Gabay",
@@ -16,13 +16,11 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.5.19",
-    "@types/xml2js": "^0.4.5",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.3",
-    "rss-parser": "^3.7.2",
     "typescript": "^3.6.3"
   },
   "devDependencies": {
