--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
+    "react-color": "^2.17.3",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
