add confirmation to delete a note, change background to gradient and add a new font

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "tsc && node ./dist/server.js",
     "dev": "tsc -w & nodemon ./dist/server.js",
     "client": "cd client && npm start",
+    "app": "cd client && npm run build && cd .. && npm start",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
