--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.30",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -28,6 +27,8 @@
     "nodemon": "^1.19.4"
   },
   "nodemonConfig": {
-    "ignore": ["client/**"]
+    "ignore": [
+      "client/**"
+    ]
   }
 }
