--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "Almog Gabay",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.30",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
