--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/express-session": "^1.15.16",
     "@types/mongoose": "^5.5.30",
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.7.9",
     "typescript": "^3.7.2"
   },
