add the option to attach a file for each note

--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.1",
+    "file-saver": "^2.0.2",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-color": "^2.18.0",
