--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "mongoose": "^5.8.9"
+    "mongoose": "^5.8.10"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.3",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
