--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon server",
     "client": "cd client && npm start",
     "app": "cd client && npm run build && cd .. && npm start",
+    "start:test": "NODE_ENV=test node server",
     "test": "jest",
     "test:watch": "jest --watch",
     "heroku-postbuild": "cd client && npm install && npm run build"
@@ -18,6 +19,7 @@
   "author": "Almog Gabay",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
@@ -26,10 +28,9 @@
     "mongoose": "^5.8.10"
   },
   "devDependencies": {
-    "@shelf/jest-mongodb": "^1.1.3",
     "jest": "^25.1.0",
-    "nodemon": "^2.0.2",
-    "supertest": "^4.0.2"
+    "mongodb-memory-server": "^6.2.4",
+    "nodemon": "^2.0.2"
   },
   "nodemonConfig": {
     "ignore": [
