--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "mongoose": "^5.9.4"
+    "mongoose": "^5.9.4",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
