--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "engines": {
     "node": "13.7.0"
   },
-  "main": "src/server.js",
+  "main": "src/server.ts",
   "scripts": {
-    "start": "node src/server",
-    "dev": "nodemon src/server",
+    "start": "ts-node src/server --transpile-only",
+    "dev": "ts-node-dev src/server",
     "client": "cd src/client && npm start",
     "app": "cd src/client && npm run build && cd .. && npm start",
-    "lint": "eslint .",
+    "lint": "tsc --noEmit && eslint '*/**/*.ts'",
     "pretest": "npm run lint",
     "test": "npm run start:test & jest",
-    "start:test": "NODE_ENV=test node src/server",
+    "start:test": "NODE_ENV=test ts-node src/server",
     "test:watch": "WATCH=true jest --watch",
     "deploy": "npm test && git push origin master & git push heroku master",
     "heroku-postbuild": "cd src/client && npm install && npm run build"
@@ -22,26 +22,32 @@
   "author": "Almog Gabay",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.3",
+    "@types/express-session": "^1.17.0",
+    "@types/mongoose": "^5.7.6",
+    "@types/multer": "^1.4.2",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "mongoose": "^5.9.4",
-    "multer": "^1.4.2"
+    "mongoose": "^5.9.5",
+    "multer": "^1.4.2",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/jest": "^25.1.4",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
     "eslint": "^6.8.0",
     "form-data": "^3.0.0",
     "jest": "^25.1.0",
     "mongodb-memory-server": "^6.3.3",
-    "nodemon": "^2.0.2"
-  },
-  "nodemonConfig": {
-    "ignore": [
-      "src/client/**"
-    ]
+    "ts-jest": "^25.2.1",
+    "ts-node-dev": "^1.0.0-pre.44"
   },
   "repository": {
     "type": "git",
