--- a/package.json
+++ b/package.json
@@ -5,50 +5,40 @@
   "engines": {
     "node": "13.7.0"
   },
-  "main": "src/server.ts",
+  "main": "src/server.js",
   "scripts": {
-    "start": "ts-node src/server --transpile-only",
-    "dev": "ts-node-dev src/server",
+    "start": "node -r esm src/server",
+    "dev": "nodemon -r esm src/server",
     "client": "cd src/client && npm start",
     "app": "cd src/client && npm run build && cd .. && npm start",
-    "lint": "tsc --noEmit && eslint '*/**/*.ts'",
+    "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "npm run start:test & sleep 4 && jest",
-    "start:test": "NODE_ENV=test ts-node src/server",
-    "test:watch": "npm run start:test & sleep 4 && WATCH=true jest --watch",
+    "test": "npm run start:test & sleep 1 && jest",
+    "start:test": "NODE_ENV=test npm run start",
+    "test:watch": "npm run start:test & sleep 1 && WATCH=true jest --watch",
     "deploy": "npm test && git push origin master && git push heroku master",
     "heroku-postbuild": "cd src/client && npm install && npm run build"
   },
   "author": "Almog Gabay",
   "license": "ISC",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.3",
-    "@types/express-session": "^1.17.0",
-    "@types/mongoose": "^5.7.8",
-    "@types/multer": "^1.4.2",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "googleapis": "^48.0.0",
     "mongoose": "^5.9.6",
-    "multer": "^1.4.2",
-    "ts-node": "^8.8.1",
-    "typescript": "^3.8.3"
+    "multer": "^1.4.2"
   },
   "devDependencies": {
-    "@types/form-data": "^2.5.0",
-    "@types/jest": "^25.1.4",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
     "eslint": "^6.8.0",
     "form-data": "^3.0.0",
     "jest": "^25.2.3",
     "mongodb-memory-server": "^6.5.0",
-    "ts-jest": "^25.2.1",
-    "ts-node-dev": "^1.0.0-pre.44"
+    "nodemon": "^2.0.2"
   },
   "repository": {
     "type": "git",
