--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "main": "src/server.js",
   "scripts": {
-    "start": "node -r esm src/server",
-    "dev": "nodemon -r esm src/server",
+    "start": "node -r esm -r dotenv/config src/server",
+    "dev": "nodemon -r esm -r dotenv/config src/server",
     "client": "cd src/client && npm start",
     "app": "cd src/client && npm run build && cd .. && npm start",
     "lint": "eslint .",
@@ -24,19 +24,17 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
-    "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "googleapis": "^48.0.0",
-    "mongoose": "^5.9.6",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.7",
     "multer": "^1.4.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "form-data": "^3.0.0",
-    "jest": "^25.2.3",
+    "jest": "^25.2.4",
     "mongodb-memory-server": "^6.5.0",
     "nodemon": "^2.0.2"
   },
