--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,5 @@
 {
   "env": {
-    "commonjs": true,
-    "es6": true,
     "node": true,
     "jest": true
   },
@@ -10,8 +8,9 @@
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
+  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2020,
+    "ecmaVersion": 2019,
     "sourceType": "module"
   },
   "ignorePatterns": ["src/client"],
