--- a/src/client/package.json
+++ b/src/client/package.json
@@ -12,7 +12,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
