Separate the client from the server, create a root package.json file to control the build and start scripts

--- a/package.json
+++ b/package.json
@@ -5,44 +5,22 @@
   "engines": {
     "node": "13.11.0"
   },
-  "type": "module",
-  "main": "src/server.js",
+  "main": "server/src/server.js",
   "scripts": {
-    "start": "node -r dotenv/config src/server",
-    "dev": "nodemon -r dotenv/config src/server",
-    "client": "cd src/client && npm start",
-    "app": "cd src/client && npm run build && cd .. && npm start",
-    "lint": "eslint .",
-    "pretest": "npm run lint",
-    "test": "npm run start:test & sleep 1 && jest",
-    "start:test": "NODE_ENV=test npm run start",
-    "test:watch": "npm run start:test & sleep 1 && WATCH=true jest --watch",
-    "deploy": "npm run lint && git push origin master && git push heroku master",
-    "heroku-postbuild": "cd src/client && npm install && npm run build"
-  },
-  "author": "Almog Gabay",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.7",
-    "multer": "^1.4.2"
-  },
-  "devDependencies": {
-    "axios": "^0.19.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "form-data": "^3.0.0",
-    "jest": "^25.2.7",
-    "mongodb-memory-server": "^6.5.2",
-    "nodemon": "^2.0.2"
+    "start": "cd server && npm start",
+    "app": "cd client && npm run build && cd ../server && npm start",
+    "test:server": "cd server && npm run lint",
+    "install:server": "cd server && npm i",
+    "install:client": "cd client && npm i && npm run build",
+    "deploy": "npm run test:server && git push origin master && git push heroku master",
+    "heroku-postbuild": "npm run install:server & npm run install:client"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/theninthsky/flying-notes.git"
   },
+  "author": "Almog Gabay",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/theninthsky/flying-notes/issues"
   },
