--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,18 +1,18 @@
 {
   "env": {
     "node": true,
-    "jest": true
+    "mocha": true
   },
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended", "plugin:mocha/recommended"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
+  "plugins": ["mocha"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2019,
     "sourceType": "module"
   },
-  "ignorePatterns": ["src/client"],
   "rules": {}
 }
