--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,7 @@
     "dev": "nodemon -r dotenv/config src/server",
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "npm run start:test & sleep 1 && jest",
-    "start:test": "NODE_ENV=test npm run start",
-    "test:watch": "npm run start:test & sleep 1 && WATCH=true jest --watch"
+    "test": "NODE_ENV=test mocha -r dotenv/config"
   },
   "author": "Almog Gabay",
   "license": "ISC",
@@ -27,20 +25,13 @@
     "multer": "^1.4.2"
   },
   "devDependencies": {
-    "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^6.8.0",
-    "form-data": "^3.0.0",
-    "jest": "^25.2.7",
+    "eslint-plugin-mocha": "^6.3.0",
+    "mocha": "^7.1.1",
     "mongodb-memory-server": "^6.5.2",
     "nodemon": "^2.0.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/theninthsky/flying-notes.git"
-  },
-  "bugs": {
-    "url": "https://github.com/theninthsky/flying-notes/issues"
-  },
-  "homepage": "https://github.com/theninthsky/flying-notes#readme"
+  }
 }
