--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,10 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.9.7",
     "multer": "^1.4.2"
   },
