--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "dev": "nodemon -r dotenv/config src/server",
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "NODE_ENV=test mocha -r dotenv/config"
+    "test": "cross-env NODE_ENV=test mocha -r dotenv/config"
   },
   "author": "Almog Gabay",
   "license": "ISC",
@@ -21,18 +21,19 @@
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "mongoose": "^5.9.9",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.9.13",
     "multer": "^1.4.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-plugin-mocha": "^6.3.0",
-    "mocha": "^7.1.1",
-    "mongodb-memory-server": "^6.5.2",
+    "mocha": "^7.1.2",
+    "mongodb-memory-server": "^6.6.0",
     "nodemon": "^2.0.3"
   }
 }
