--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "an application for taking notes.",
   "engines": {
-    "node": "13.11.0"
+    "node": "13.9.0"
   },
   "main": "server/src/server.js",
   "scripts": {
@@ -12,7 +12,7 @@
     "test:server": "cd server && npm test",
     "install:server": "cd server && npm i",
     "install:client": "cd client && npm i && npm run build",
-    "deploy": "npm run test:server && git push origin master && git push heroku master",
+    "deploy": "npm run test:server && git push origin master",
     "heroku-postbuild": "npm run install:server & npm run install:client"
   },
   "repository": {
