--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "helmet": "^3.22.0",
     "mongoose": "^5.9.13",
     "multer": "^1.4.2"
   },
