Implement Redis session store

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:server": "cd server && npm test",
     "install:server": "cd server && npm i",
     "install:client": "cd client && npm i && npm run build",
-    "deploy": "npm run test:server && git push origin master",
+    "publish": "npm run test:server && git push origin master",
     "heroku-postbuild": "npm run install:server & npm run install:client"
   },
   "repository": {
