--- a/server/package.json
+++ b/server/package.json
@@ -18,13 +18,14 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "connect-mongo": "^3.2.0",
+    "connect-redis": "^4.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^3.22.0",
     "mongoose": "^5.9.13",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
