--- a/package.json
+++ b/package.json
@@ -1,28 +1,39 @@
 {
-  "name": "flying-notes",
-  "version": "1.0.0",
-  "description": "an application for taking notes.",
-  "engines": {
-    "node": "13.9.0"
+  "name": "flying-notes-client",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "axios": "^0.19.2",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-color": "^2.18.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
-  "main": "server/src/server.js",
   "scripts": {
-    "start": "cd server && npm start",
-    "app": "cd client && npm run build && cd ../server && npm start",
-    "test:server": "cd server && npm test",
-    "install:server": "cd server && npm i",
-    "install:client": "cd client && npm i && npm run build",
-    "publish": "npm run test:server && git push origin master",
-    "heroku-postbuild": "REACT_APP_SERVER_URL=https://flyingnotes.herokuapp.com npm run install:server & npm run install:client"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/theninthsky/flying-notes.git"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "author": "Almog Gabay",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/theninthsky/flying-notes/issues"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
-  "homepage": "https://github.com/theninthsky/flying-notes#readme"
+  "devDependencies": {}
 }
