--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "flying-notes-client",
+  "name": "flyingnotes-client",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "axios": "^0.19.2",
     "node-sass": "^4.14.1",
@@ -34,6 +33,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
