--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flyingnotes-client",
   "version": "1.0.0",
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
