--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
   "semi": false,
   "singleQuote": true,
   "arrowParens": "avoid",
-  "trailingComma": "all",
+  "trailingComma": "none",
   "endOfLine": "lf"
 }
