--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-app-rewired": "^2.1.6",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.1",
     "recoil": "^0.1.2",
     "styled-components": "^5.2.1",
     "workbox-background-sync": "^5.1.4",
