Make the app mobile-first

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-app-rewire-styled-components": "^3.0.2",
-    "react-app-rewired": "^2.1.6",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "recoil": "^0.1.2",
