Implement an auto reconnecting websocket

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "recoil": "^0.1.2",
+    "reconnecting-websocket": "^4.4.0",
     "styled-components": "^5.2.1",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
