--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "flyingnotes-client",
   "version": "1.0.0",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-app-rewire-styled-components": "^3.0.2",
