--- a/public/manifest.json
+++ b/public/manifest.json
@@ -43,6 +43,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#161b22",
-  "background_color": "#0d1117"
+  "theme_color": "#0a0a0a",
+  "background_color": "#0a0a0a"
 }
