--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,13 +4,13 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/x-icon",
+      "sizes": "64x64 32x32 24x24 16x16"
     },
     {
-      "src": "icon_x152.png",
+      "src": "icon_x192.png",
       "type": "image/png",
-      "sizes": "152x152"
+      "sizes": "192x192"
     },
     {
       "src": "icon_x384.png",
@@ -23,9 +23,9 @@
       "sizes": "512x512"
     },
     {
-      "src": "maskable_icon_x152.png",
+      "src": "maskable_icon_x192.png",
       "type": "image/png",
-      "sizes": "152x152",
+      "sizes": "192x192",
       "purpose": "maskable"
     },
     {
