--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-app-rewire-styled-components": "^3.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
