--- a/package.json
+++ b/package.json
@@ -30,15 +30,17 @@
     "@storybook/addon-links": "^6.2.0",
     "@storybook/node-logger": "^6.2.0",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.2.0"
+    "@storybook/react": "^6.2.0",
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "npm-run-all --serial -c build:storybook build:react",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build:react": "react-app-rewired build",
+    "build:storybook": "build-storybook -o public/storybook"
   },
   "eslintConfig": {
     "extends": [
