--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,11 @@
 # The following redirect is intended for use with most SPAs that handle
 # routing internally.
 [[redirects]]
+  from = "/storybook"
+  to = "/storybook/index.html"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
