--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,9 @@
-# The following redirect is intended for use with most SPAs that handle
-# routing internally.
 [[redirects]]
   from = "/storybook"
   to = "/storybook/index.html"
-  status = 200
+  force = true
 
+# The following redirect is intended for use with most SPAs that handle routing internally.
 [[redirects]]
   from = "/*"
   to = "/index.html"
