--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "name": "flyingnotes-client",
   "version": "1.0.0",
+  "scripts": {
+    "start": "webpack serve --mode development",
+    "build": "npm-run-all --serial -c build:storybook build:react",
+    "test": "jest",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build:react": "webpack --mode production",
+    "build:storybook": "build-storybook --quiet -o public/storybook"
+  },
   "dependencies": {
+    "@babel/runtime": "^7.14.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-app-rewire-styled-components": "^3.0.2",
-    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
     "recoil": "^0.2.0",
     "reconnecting-websocket": "^4.4.0",
     "styled-components": "^5.3.0",
@@ -25,39 +31,27 @@
     "workbox-strategies": "^6.1.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-react": "^7.13.13",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/node-logger": "^6.2.9",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
-    "npm-run-all": "^4.1.5"
-  },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "npm-run-all --serial -c build:storybook build:react",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build:react": "react-app-rewired build",
-    "build:storybook": "build-storybook --quiet -o public/storybook"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.5",
+    "eslint": "^7.26.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-webpack-plugin": "^2.5.4",
+    "html-webpack-plugin": "^5.3.1",
+    "interpolate-html-plugin": "^4.0.0",
+    "npm-run-all": "^4.1.5",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
