Further improve configuration

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "start": "webpack serve --mode development",
-    "build": "npm-run-all --serial -c build:storybook build:react",
+    "build": "npm-run-all --serial -c build:storybook build:app",
+    "serve": "serve build -p 3000",
     "test": "jest",
     "storybook": "start-storybook -p 6006 -s public",
-    "build:react": "webpack --mode production",
+    "build:app": "webpack --mode production",
     "build:storybook": "build-storybook --quiet -o public/storybook"
   },
   "dependencies": {
@@ -42,13 +43,14 @@
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.5",
     "eslint": "^7.26.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-webpack-plugin": "^2.5.4",
     "html-webpack-plugin": "^5.3.1",
-    "interpolate-html-plugin": "^4.0.0",
     "npm-run-all": "^4.1.5",
+    "serve": "^11.3.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
