--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "start": "webpack serve --mode development",
-    "build": "npm-run-all --serial -c build:storybook build:app",
+    "build:all": "npm-run-all --serial -c build:storybook build:app",
     "serve": "serve build -p 3000",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
-    "build:app": "webpack --mode production",
+    "build": "webpack --mode production",
     "build:storybook": "build-storybook --quiet -o public/storybook",
     "build-storybook": "build-storybook"
   },
