--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.38.0",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "workbox-webpack-plugin": "^6.1.5"
   }
 }
