--- a/package.json
+++ b/package.json
@@ -15,16 +15,11 @@
     "@babel/runtime": "^7.14.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
     "react-helmet": "^6.1.0",
     "reconnecting-websocket": "^4.4.0",
     "workbox-core": "^6.1.5",
-    "workbox-expiration": "^6.1.5",
-    "workbox-precaching": "^6.1.5",
-    "workbox-routing": "^6.1.5",
-    "workbox-strategies": "^6.1.5"
+    "workbox-precaching": "^6.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -35,6 +30,8 @@
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
+    "@testing-library/react": "^11.2.7",
+    "babel-jest": "^27.0.1",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
@@ -42,10 +39,17 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-webpack-plugin": "^2.5.4",
     "html-webpack-plugin": "^5.3.1",
+    "jest": "^27.0.1",
+    "jest-transform-stub": "^2.0.0",
     "npm-run-all": "^4.1.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "recoil": "^0.3.1",
     "serve": "^11.3.2",
     "style-loader": "^2.0.0",
-    "webpack": "^5.38.0",
+    "styled-components": "^5.3.0",
+    "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
     "workbox-webpack-plugin": "^6.1.5"
