--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/builder-webpack5": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "@testing-library/react": "^11.2.7",
     "babel-jest": "^27.0.1",
