--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@testing-library/react": "^11.2.7",
     "babel-jest": "^27.0.1",
     "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^1.12.0",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
     "eslint": "^7.27.0",
