--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "jest",
     "storybook": "start-storybook -p 6006",
     "build": "webpack --mode production",
-    "build:storybook": "build-storybook --quiet -o public/storybook",
-    "build-storybook": "build-storybook"
+    "build:storybook": "build-storybook --quiet -o public/storybook"
   },
   "dependencies": {
     "@babel/runtime": "^7.14.0",
@@ -23,7 +22,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/plugin-transform-runtime": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
@@ -31,16 +30,15 @@
     "@storybook/builder-webpack5": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "@testing-library/react": "^11.2.7",
-    "babel-jest": "^27.0.1",
+    "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "copy-webpack-plugin": "^9.0.0",
-    "css-loader": "^5.2.6",
     "eslint": "^7.27.0",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-webpack-plugin": "^2.5.4",
     "html-webpack-plugin": "^5.3.1",
-    "jest": "^27.0.1",
+    "jest": "^27.0.3",
     "jest-transform-stub": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
@@ -48,7 +46,6 @@
     "react-router-dom": "^5.2.0",
     "recoil": "^0.3.1",
     "serve": "^11.3.2",
-    "style-loader": "^2.0.0",
     "styled-components": "^5.3.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
