--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-error-boundary": "^3.1.3",
     "react-helmet": "^6.1.0",
     "reconnecting-websocket": "^4.4.0",
+    "use-click-outside": "^2.0.0",
     "workbox-core": "^6.1.5",
     "workbox-precaching": "^6.1.5"
   },
