--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@storybook/addon-links": "^6.2.9",
     "@storybook/builder-webpack5": "^6.2.9",
     "@storybook/react": "^6.2.9",
+    "@svgr/webpack": "^5.5.0",
     "@testing-library/react": "^11.2.7",
     "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
