--- a/package.json
+++ b/package.json
@@ -36,17 +36,25 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^3.0.1",
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-webpack-plugin": "^2.5.4",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^27.0.3",
     "jest-transform-stub": "^2.0.0",
+    "mini-css-extract-plugin": "^1.6.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.3.4",
+    "postcss-loader": "^6.1.0",
+    "postcss-preset-env": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "recoil": "^0.3.1",
+    "sass": "^1.34.1",
+    "sass-loader": "^12.1.0",
     "serve": "^11.3.2",
     "styled-components": "^5.3.0",
     "webpack": "^5.38.1",
