Modify Netlify configuration

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,16 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[headers]]
+  for = "/"
+  [headers.values]
+    cache-control = '''
+    max-age=0,
+    no-cache,
+    no-store,
+    must-revalidate'''
+
+[[headers]]
+  for = "/*"
+  [headers.values]
