Modify Netlify configuration #2

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,14 +5,10 @@
   status = 200
 
 [[headers]]
-  for = "/"
+  for = "*.js"
   [headers.values]
-    cache-control = '''
-    max-age=0,
-    no-cache,
-    no-store,
-    must-revalidate'''
-
+    Cache-Control = "immutable"
 [[headers]]
-  for = "/*"
+  for = "*.css"
   [headers.values]
+    Cache-Control = "immutable"
