--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.0",
+    "clsx": "^1.1.1",
     "prop-types": "^15.7.2",
     "react-error-boundary": "^3.1.3",
     "react-helmet": "^6.1.0",
@@ -34,7 +35,6 @@
     "@testing-library/react": "^11.2.7",
     "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
-    "babel-plugin-styled-components": "^1.12.0",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
     "css-minimizer-webpack-plugin": "^3.0.1",
@@ -56,7 +56,6 @@
     "sass": "^1.34.1",
     "sass-loader": "^12.1.0",
     "serve": "^11.3.2",
-    "styled-components": "^5.3.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
