--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.7.2",
     "react-error-boundary": "^3.1.3",
     "react-helmet": "^6.1.0",
+    "react-swipeable": "^6.1.2",
     "react-transition-group": "^4.4.2",
     "reconnecting-websocket": "^4.4.0",
     "use-click-outside": "^2.0.0",
