--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.15.3",
-    "axios": "^0.21.1",
+    "@theninthsky/react": "^1.0.0",
     "clsx": "^1.1.1",
     "prop-types": "^15.7.2",
     "react-error-boundary": "^3.1.3",
